crates/cadenza-compiler/test-data/semantics/variables-error-pattern-mismatch.cdz
let 42 = x